--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot[job-queue]==21.1
+﻿python-telegram-bot[job-queue]==20.7
 requests==2.31.0
 beautifulsoup4==4.12.3
 lxml==5.2.1
@@ -7,4 +7,3 @@ urllib3==2.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 idna==3.6
-
